Fix center issue in body, remove align-content and replace with align-items

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     padding-top: 30px;
 }
 
